Fix className on Welcome component and add z-index to Welcome.css

--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -4,6 +4,7 @@
   height: 100%;
   top: 0;
   background: white;
+  z-index: 11;
 }
 .login-button {
   color: #494949;
